--- a/index.html
+++ b/index.html
@@ -29,26 +29,28 @@
                 </div>
                 <div class="messages">
                     <div class="message">
-                        <div class="user-send">Cecilia - 11:30</div>
+                        <div class="top">Cecilia - 11:30</div>
                         <div class="body">Tive uma ideia incrível para um projeto!</div>
                     </div>
 
                     <div class="message you">
-                        <div class="user-send">Você - 11:32</div>
+                        <div class="top">Você - 11:32</div>
                         <div class="body">Serio? Me conta mais</div>
                     </div>
                     <div class="message">
-                        <div class="user-send">Cecilia - 11:34</div>
+                        <div class="top">Cecilia - 11:34</div>
                         <div class="body">E se a gente fizessse um chat moderno e responsivo em apenas uma semana?</div>
                     </div>
 
                     <div class="message you">
-                        <div class="user-send">Você - 11:35</div>
+                        <div class="top">Você - 11:35</div>
                         <div class="body"><strong>#boraCodar!</strong></div>
                     </div>
                 </div>
             </div>
-            <div id="bottom">C</div>
+            <div id="bottom">
+
+            </div>
     </div>
 </body>
 </html>
