--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
                 </div>
             </div>
             <div id="bottom">
-
+                <form>
+                    <div class="input-wrapper">
+                        <input type="text" placeholder="Digite sua mensagem">
+                        <button>
+                            <i class="ph-paper-plane-right-fill"></i>
+                        </button>
+                    </div>
+                </form>
             </div>
     </div>
 </body>
