--- a/index.html
+++ b/index.html
@@ -46,18 +46,54 @@
                         <div class="top">Você - 11:35</div>
                         <div class="body"><strong>#boraCodar!</strong></div>
                     </div>
+                    <div class="message">
+                        <div class="top">Cecilia - 11:30</div>
+                        <div class="body">Tive uma ideia incrível para um projeto!</div>
+                    </div>
+
+                    <div class="message you">
+                        <div class="top">Você - 11:32</div>
+                        <div class="body">Serio? Me conta mais</div>
+                    </div>
+                    <div class="message">
+                        <div class="top">Cecilia - 11:34</div>
+                        <div class="body">E se a gente fizessse um chat moderno e responsivo em apenas uma semana?</div>
+                    </div>
+
+                    <div class="message you">
+                        <div class="top">Você - 11:35</div>
+                        <div class="body"><strong>#boraCodar!</strong></div>
+                    </div>
+                    <div class="message">
+                        <div class="top">Cecilia - 11:30</div>
+                        <div class="body">Tive uma ideia incrível para um projeto!</div>
+                    </div>
+
+                    <div class="message you">
+                        <div class="top">Você - 11:32</div>
+                        <div class="body">Serio? Me conta mais</div>
+                    </div>
+                    <div class="message">
+                        <div class="top">Cecilia - 11:34</div>
+                        <div class="body">E se a gente fizessse um chat moderno e responsivo em apenas uma semana?</div>
+                    </div>
+
+                    <div class="message you">
+                        <div class="top">Você - 11:35</div>
+                        <div class="body"><strong>#boraCodar!</strong></div>
+                    </div>
                 </div>
             </div>
-            <div id="bottom">
-                <form>
-                    <div class="input-wrapper">
-                        <input type="text" placeholder="Digite sua mensagem">
-                        <button>
-                            <i class="ph-paper-plane-right-fill"></i>
-                        </button>
-                    </div>
-                </form>
-            </div>
+            <form id="bottom">
+                <input type="text" placeholder="Digite sua mensagem">
+                <button>
+                    <i class="ph-paper-plane-right-fill"></i>
+                </button>
+            </form>
     </div>
+    <script>
+        const messages = document.querySelector('.messages');
+        messages.lastElementChild.scrollIntoView();
+    </script>
 </body>
 </html>
